<?xml version="1.0"?>
<package format="2">
  <name>scene_calibration</name>
  <version>0.0.2</version>
  <description>Package to estimate frames and planes.</description>
  <maintainer email="joao.p.souza@inesctec.pt">João Pedro Carvalho de Souza</maintainer>
  <license>BY-NC-ND</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>aruco_detect</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>usb_cam</build_export_depend>
  <build_export_depend>aruco_detect</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>aruco_detect</exec_depend>

  <export>

  </export>
</package>
